--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">RecyclerViewDemo</string>
     <string name="note_1">Note 1</string>
     <string name="imageview_for_note">imageView for Note</string>
+    <string name="enter_message">Enter Message</string>
+    <string name="mynotes">myNotes</string>
+    <string name="mycontacts">myContacts</string>
+    <string name="mychat">myChat</string>
+    <string name="recyclerview_demo">RecyclerView Demo</string>
 </resources>
